--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,12 @@
-baseURL = 'https://factgear.com/'
+baseURL = 'https://fsetdeveloper.github.io/factgear.github.io/'
 languageCode = 'en-us'
 title = 'FactGear.com'
 theme = "paper"
+
+[module]
+  [[module.imports]]
+    path = "github.com/nanxiaobei/hugo-paper"   
+
+[params]
+  # color style
+  color = 'light'                           # linen, wheat, gray, light    
