--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://fsetdeveloper.github.io/factgear.github.io/'
+baseURL = 'https://fsetdeveloper.github.io/factgearblog/'
 languageCode = 'en-us'
 title = 'FactGear.com'
 theme = "paper"
