--- a/hugo.toml
+++ b/hugo.toml
@@ -3,6 +3,8 @@ languageCode = 'en-us'
 title = 'FactGear.com'
 theme = "paper"
 
+custom_css = ["css/styles.css"]
+
 [module]
   [[module.imports]]
     path = "github.com/nanxiaobei/hugo-paper"   
